[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4.1",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "sendgrid>=6.12.4",
    "streamlit>=1.48.0",
]
